# tinkerbell

./: .gitignore  .nextest.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  justfile  rust-toolchain.toml
.github/workflows/: ci.yml  docs.yml
crates/api/: Cargo.toml  README.md  build.rs
crates/api/proto/: api.proto
crates/api/src/: lib.rs  main.rs
crates/api/tests/: compile.rs  server.rs
crates/canvas/: Cargo.toml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: lib.rs  main.rs  transport.rs
crates/cli/src/commands/: status.rs
crates/cli/src/tests/: status.rs
crates/cli/tests/: args.rs  compile.rs
crates/daemon/: Cargo.toml  README.md
crates/daemon/src/: config.rs  lib.rs  main.rs  signal.rs
crates/daemon/tests/: compile.rs  daemon.rs
crates/docsbookgen/: Cargo.toml
crates/far-k8s-controller/: Cargo.toml  README.md
crates/far-k8s-controller/src/: main.rs
crates/graphdb/: Cargo.toml
crates/metrics/: Cargo.toml
crates/scheduler/: Cargo.toml  README.md
crates/scheduler/docs/: design-notes.md
crates/scheduler/src/: clock.rs  io.rs  lib.rs  pal.rs  ready_queue.rs  scheduler.rs  syscall.rs  task.rs  wait_map.rs
crates/scheduler/tests/: basic.rs  cancel.rs  compile.rs  done_order.rs  integration.rs  io_register.rs  io_wait.rs  join.rs  join_prompt.rs  join_timeout.rs  panic_isolation.rs  pipe_echo.rs  priority.rs  ready_queue.rs  scheduler.rs  sleep.rs  sleep_virtual.rs  stale_ready.rs  syscall_yield.rs  yield.rs  yield_syscall.rs
crates/wal/: Cargo.toml
docs/adrs/:  0004-Agent_Loop_and_ReAct_Design.md   0027-Localization_and_Internationalization_(i18n)_Policy.md  0002-Docbook_Policy.md  0004-Agent_Loop_and_ReAct_Design.md  0005-Virtual_Canvas_and_GitOps_Strategy.md  0006-WAL_Schema_and_Replay_Policy.md  0008-Persistent_Agent_Memory_Strategy.md  0009-Code_Structure_Graph_and_Symbol_Analysis.md  0010-Task_Plan_Timeline_and_Execution_Metadata.md  0012-Agent_Skill_System_(Future_Plan)md  0013-Firecracker_MicroVM_Integration.md  0015-REST_gRPC_API_Design.md  0016-Filesystem_Socket_Protocol_for_CLI_and_Node-level_FAR_Orchestration2.md  0018-Metrics_Policy_and_Instrumentation_Plan.md  0020-Versioning_and_Release_Policy.md  0021-Contributor_Roles_and_Governance.md  0022-Backup_Disaster_Recovery_and_Failover_Strategy.md  0023-Secrets_&_Credentials_Management.md  0024-Authentication_and_Authorization.md  0026-Performance_and_Scalability_Strategy.md  0028-Compliance_Auditing_and_Regulatory_Considerations.md  0030-Cost_Management_and_Budgeting.md  index.md
docs/diagrams/: scheduler_component_diagrams.md
docs/mdbook/: book.toml
docs/whitepapers/: Autonomous_Agent_System–Architecture_and_Design_Whitepaper.md  Design_Document_Coroutine-Based_Task_Scheduler_for_Tinkerbell.md  Gemini CLI Agent Architecture and Reimplementation Plan.md  Handling_Command_Chaining_and_Unix_Tools_in_Pure_Rust.md  Tinkerbell System Architecture and Design Overview.md  task_scheduler.md  tinkerbell_concept.md
docsbook/: crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
docsbook/api/: fn.main.html
scripts/: gen_dockbook.sh  skaffold_repo.sh  start.sh
tests/: api.rs  full_pipeline.rs
(+230 files in other folders)
