[workspace]
members = [
  "crates/docsbookgen",
  "crates/core",
  "crates/api",
  "crates/cli",
  "crates/executor",
  "crates/scheduler",
  "crates/canvas",
  "crates/wal",
  "crates/logging",
  "crates/metrics",
  "crates/graphdb",
  "crates/router",
  "crates/plugins",
  "crates/daemon",
  "crates/far-k8s-controller",
]
resolver = "2"
