[package]
name = "api"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[features]
rest = ["axum", "serde"]

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tonic = { version = "0.10", features = ["transport"] }
prost = "0.12"
prost-types = "0.12"

# optional REST dependencies
axum = { version = "0.6", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tracing-subscriber = "0.3"

[build-dependencies]
tonic-build = "0.10"
