[package]
name = "cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.10", features = ["transport"] }
tower = "0.4"
serde_json = "1.0"
api = { path = "../api" }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
