[package]
name = "daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
signal-hook = { version = "0.3", features = ["iterator"] }
crossbeam = "0.8"
notify = "6"
api = { path = "../api" }

[dev-dependencies]
tempfile = "3"
