[package]
name = "far-k8s-controller"
version = "0.1.0"
edition = "2024"

[dependencies]
kube = { version = "0.88", features = ["derive", "runtime"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
schemars = "0.8"
futures = "0.3"
k8s-openapi = { version = "0.21.1", features = ["v1_29"] }
serde_json = "1"
